--- a/EddieCampbellsBacchus/EddieCampbellsBacchus.html
+++ b/EddieCampbellsBacchus/EddieCampbellsBacchus.html
@@ -36,7 +36,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-The success of Kevin Eastman and Peter Laird's Teenage Mutant Ninja Turtles led to a short-lived explosion of black and white independent comics in the mid-1980s. Campbell joined in, creating the series Deadface for small British publisher Harrier Comics, telling the story of Bacchus, god of wine and revelry, and the few other Greek mythological figures who have survived to the present day. 
+<a href="../EddieCampbell/EddieCampbell.html">Eddie Campbell</a>.The success of Kevin Eastman and Peter Laird's Teenage Mutant Ninja Turtles led to a short-lived explosion of black and white independent comics in the mid-1980s. Campbell joined in, creating the series Deadface for small British publisher Harrier Comics, telling the story of Bacchus, god of wine and revelry, and the few other Greek mythological figures who have survived to the present day. 
 </p><p>
 Harrier published eight issues of Deadface and two issues of a companion comic, Bacchus. Campbell then began publishing short Bacchus stories in a number of anthologies, such as the British anthology Trident published by Trident Comics, and the American anthology Dark Horse Presents published by Dark Horse Comics. Dark Horse reprinted the Harrier series as Immortality Isn't Forever in 1990 and a selection of the short stories as Doing the Islands With Bacchus in 1991. Campbell continued to produce Bacchus stories for Dark Horse until 1995 as a series of miniseries. The entire Bacchus saga is to be published in two 500-page volumes by Top Shelf Productions.
 </p>
