--- a/EyeballKid/EyeballKid.html
+++ b/EyeballKid/EyeballKid.html
@@ -26,7 +26,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Eddie Campbell is one of today's finest storytellers, with a loyal following of readers interested in exploring subjects beyond the superhero genre. His wry wit and delicate insights into human nature are cherished by all who have read his work. This series pulls together all of the difficult-to-find Eyeball Kid stories. 
+<a href="../EddieCampbell/EddieCampbell.html">Eddie Campbell</a> is one of today's finest storytellers, with a loyal following of readers interested in exploring subjects beyond the superhero genre. His wry wit and delicate insights into human nature are cherished by all who have read his work. This series pulls together all of the difficult-to-find Eyeball Kid stories. 
 </p><p>
 In this first issue, the Eyeball Kid goes undercover as a no-good bum, working as a delivery boy for a local bookie. Since killing big daddy Zeus himself, the Kid has discovered that Zeus's thunderbolt, stolen from the god's still warm corpse, is no longer working. Suddenly the Eyeball Kid has become a target for the nefarious Telchines, Hermes (Zeus's own son), and a host of others!
 </p>
