--- a/index.html
+++ b/index.html
@@ -6152,6 +6152,13 @@
 </tr>
 
 <tr>
+<td>Eddie Campbell</td>
+<td>1955</td>
+<td>Creator</td>
+<td><a href="EddieCampbell/EddieCampbell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eddie Campbell's Bacchus</td>
 <td>1995</td>
 <td>Eddie Campbell Comics</td>
