--- a/index.html
+++ b/index.html
@@ -1466,6 +1466,13 @@
 </tr>
 
 <tr>
+<td>Alterna Comics</td>
+<td>2007</td>
+<td>Publisher</td>
+<td><a href="Alterna/Alterna.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Amala's Blade</td>
 <td>2013</td>
 <td>Dark Horse</td>
