--- a/index.html
+++ b/index.html
@@ -7912,6 +7912,13 @@
 </tr>
 
 <tr>
+<td>Grips</td>
+<td>1986</td>
+<td>Silver Wolf</td>
+<td><a href="Grips/Grips.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Groo</td>
 <td>1982</td>
 <td>PC</td>
@@ -16431,6 +16438,13 @@
 <td>1970</td>
 <td>Creator</td>
 <td><a href="TimLaneUK/TimLaneUK.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tim Vigil</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="TimVigil/TimVigil.html">Details</a></td>
 </tr>
 
 <tr>
