--- a/Faust/Faust.html
+++ b/Faust/Faust.html
@@ -78,7 +78,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Faust is the lead superhero character and title of a collective series of comic books by Tim Vigil (art) and David Quinn (stories), published by American companies Northstar, Rebel Studios, Avatar Press, and Caliber Comics.
+Faust is the lead superhero character and title of a collective series of comic books by <a href="../TimVigil/TimVigil.html">Tim Vigil</a> (art) and David Quinn (stories), published by American companies Northstar, Rebel Studios, Avatar Press, and Caliber Comics.
 </p><p>
 The series featured strong graphic violence and sexual situations. The main series is known as "Faust: Love Of The Damned" and started publishing in 1987, with new issues being published irregularly, roughly once a year, or sometimes every two years. David Quinn completed a script in 1996 (when writing the proposal to sell the film). The gap between issues grew wider with time. Issue 13 was published in 2005. It then took seven years for the authors to deliver the two last issues, 14 and 15, which concluded the story 25 years after the first episode.
 </p><p>
