--- a/index.html
+++ b/index.html
@@ -2938,6 +2938,13 @@
 </tr>
 
 <tr>
+<td>Blab!</td>
+<td>1986</td>
+<td>Monte Comix</td>
+<td><a href="Blab/Blab.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black</td>
 <td>2017</td>
 <td>Black Mask Studios</td>
