--- a/index.html
+++ b/index.html
@@ -7240,6 +7240,13 @@
 </tr>
 
 <tr>
+<td>Fukitor</td>
+<td>2017</td>
+<td>FU Press</td>
+<td><a href="Fukitor/Fukitor.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fun Home</td>
 <td>2006</td>
 <td>Houghton Mifflin</td>
