Harvey and Drew

--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -238,7 +238,8 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li>Rom 	#1–14 	May 2016 – November 2017 
 <li>Rom &amp; The Micronauts 	#1–5 	December 2017 – May 2018 
 <li>Rom: Dire Wraiths 		upcoming 
-<li>Rom vs. Transformers: Shining Armor 	#1–5 	July 2017 – November 2017 
+<li>Rom vs. Transformers: Shining Armor 	#1–5 	July 2017 – November 2017
+<li><a href="../Samaris/Samaris.html">Samaris</a> (2017)
 <li><a href="../SaucerState/SaucerState.html">Saucer State</a>
 <li>Savage Membrane: A Cal McDonald Mystery 		
 <li>Saw: Rebirth 		
