--- a/index.html
+++ b/index.html
@@ -436,6 +436,13 @@
 </tr>
 
 <tr>
+<td>A People's History of American Empire</td>
+<td>2008</td>
+<td>Metropolitan Books</td>
+<td><a href="HowardZinn/HowardZinn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>A+X</td>
 <td>2012</td>
 <td>Epic</td>
@@ -4121,6 +4128,13 @@
 </tr>
 
 <tr>
+<td>Cities of the Fantastic</td>
+<td>2002</td>
+<td>NBM</td>
+<td><a href="Samaris/Samaris.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Citizen V and the V Battalion</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -6024,6 +6038,13 @@
 <td>1996</td>
 <td>Vertigo</td>
 <td><a href="Dreaming/Dreaming.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Drew Friedman</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="DrewFriedman/DrewFriedman.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14387,6 +14408,13 @@
 <td>1905</td>
 <td>James Swinerton</td>
 <td><a href="SamAndHisLaugh/SamAndHisLaugh.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Samaris</td>
+<td>2007</td>
+<td>IDW</td>
+<td><a href="Samaris/Samaris.html">Details</a></td>
 </tr>
 
 <tr>
