--- a/HarveyKurtzman/HarveyKurtzman.html
+++ b/HarveyKurtzman/HarveyKurtzman.html
@@ -20,6 +20,13 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
