--- a/index.html
+++ b/index.html
@@ -5347,6 +5347,13 @@
 </tr>
 
 <tr>
+<td>Deadline Magazine</td>
+<td>1988</td>
+<td>Deadline Publications</td>
+<td><a href="DeadlineMag/DeadlineMag.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deadly Foes of Spider-Man</td>
 <td>1991</td>
 <td>Marvel</td>
