--- a/HarveyKurtzman/HarveyKurtzman.html
+++ b/HarveyKurtzman/HarveyKurtzman.html
@@ -27,6 +27,7 @@
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HarveyKurtzman9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
