--- a/HeavyLiquid/HeavyLiquid.html
+++ b/HeavyLiquid/HeavyLiquid.html
@@ -29,7 +29,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Heavy Liquid is a mysterious substance that people use as a drug in a future New York City. The comic follows a detective named S, who is addicted to the mind-altering substance. There's a lot of twists and turns in this gritty, Blade Runner-esque dystopian world. Paul Pope wrote and illustrated the comic during a peak era of cyberpunk storytelling. Today, it stands out as a timeless, edgy, and weird sci-fi comic.
+<a href="../PaulPope/PaulPope.html">Paul Pope</a>, Heavy Liquid is a mysterious substance that people use as a drug in a future New York City. The comic follows a detective named S, who is addicted to the mind-altering substance. There's a lot of twists and turns in this gritty, Blade Runner-esque dystopian world. Paul Pope wrote and illustrated the comic during a peak era of cyberpunk storytelling. Today, it stands out as a timeless, edgy, and weird sci-fi comic.
 </p><p>
 A former police officer known only as "S" operates as a private detective based in New York City, finding people and objects for a fee. S steals a quantity of a strange substance called "Heavy Liquid". On its own, it is a metallic-liquid explosive, but it turns into "black milk" when cooked, and exhibits mind-altering, drug-like properties. A mysterious art collector who also has a quantity of Heavy Liquid wishes to hire S to find a missing artist named Rodan Esperella (coincidentally S's ex-lover), whom he hopes will create a piece out of the Heavy Liquid for him. 
 </p><p>
