--- a/Image/image.html
+++ b/Image/image.html
@@ -116,7 +116,7 @@ Titles
 <li>Big Bang Comics
 <li>Big Bruisers
 <li>Big Hair Productions
-<li>Birthright (2014)
+<li><a href="../Birthright/Birthright.html">Birthright</a> (2014)
 <li><a href="../BitchPlanet/BitchPlanet.html">Bitch Planet</a> (2014)
 <li>Black and White
 <li>Black Cloud
