--- a/PaulPope/PaulPope.html
+++ b/PaulPope/PaulPope.html
@@ -33,6 +33,10 @@
 </div></div>
 </p><p>
 Paul Pope (born September 25, 1970, in Philadelphia, Pennsylvania) is an American alternative cartoonist. Pope's work combines the precision and romance of European comics artists with the energy and page design of the manga tradition. Pope's two protagonist types are the silent, lanky outsider male of One-Trick Ripoff, Escapo and Heavy Liquid; or the resourceful, aggressive, humorous young teenage girls of THB. He has self-published some of his work, most notably THB, through his own Horse Press, with other work for such publishers as DC Comics/Vertigo and First Second Books.
+</p><p>
+Titles
+</p><p>
+<li><a href="../HeavyLiquid/HeavyLiquid.html">Heavy Liquid</a>
 </p>
 
 </body>
