--- a/index.html
+++ b/index.html
@@ -2917,6 +2917,13 @@
 </tr>
 
 <tr>
+<td>Birthright</td>
+<td>2014</td>
+<td>Image</td>
+<td><a href="Birthright/Birthright.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bishop</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -18157,7 +18164,14 @@
 </tr>
 
 <tr>
-<td><a name ="z">Zap</td>
+<td><a name ="z">Z2 Comics</td>
+<td>2014</td>
+<td>Publisher</td>
+<td><a href="Z2Comics/Z2Comics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zap</td>
 <td>1968</td>
 <td>Apex Novelty</td>
 <td><a href="Zap/zap.html">Details</a></td>
