--- a/StarReach/StarReach.html
+++ b/StarReach/StarReach.html
@@ -2,16 +2,46 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Star Reach</title>
 </head>
 
 <body>
-<h2>Star Reach</h2>
-<img src="StarReach1.jpg"> 
-<img src="StarReach.jpg"> <br>
-Publisher: Mike Friedrich 1974 - 1979<br>
+<img src="StarReach.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="StarReach.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="StarReach18.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Star Reach (also spelled Star*Reach) was an American science fiction and fantasy comics anthology published from 1974 to 1979 by Mike Friedrich.
 </p><p>
 One of the first American mainstream independent comic books, Star*Reach bridged the gap between the countercultural underground comics and traditional Marvel/DC Comics fare, providing mature genre stories for an adult audience. The fan press of the time referred to this and the comics magazine Heavy Metal as "ground-level publications". 
