--- a/index.html
+++ b/index.html
@@ -443,6 +443,13 @@
 </tr>
 
 <tr>
+<td>A Wave Blue World</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="AWaveBlueWorld/AWaveBlueWorld.html">Details</a></td>
+</tr>
+
+<tr>
 <td>A+X</td>
 <td>2012</td>
 <td>Epic</td>
