--- a/index.html
+++ b/index.html
@@ -638,6 +638,20 @@
 </tr>
 
 <tr>
+<td>AC Gilbert</td>
+<td>1958</td>
+<td>Publisher</td>
+<td><a href="ACGilbert/ACGilbert.html">Details</a></td>
+</tr>
+
+<tr>
+<td>AC McClurg</td>
+<td>1903</td>
+<td>Publisher</td>
+<td><a href="ACMcClurg/ACMcClurg.html">Details</a></td>
+</tr>
+
+<tr>
 <td>ACG</td>
 <td>1955</td>
 <td>Publisher</td>
