--- a/BuckRogers/BuckRogers.html
+++ b/BuckRogers/BuckRogers.html
@@ -30,6 +30,7 @@ Movie Serials, 1979 Movie and TV series by Universal
 <div class="mySlides" style="text-align: center;"><img src="BuckRogersSerial2.jpg" title="Buster Crabbe"></div>
 <div class="mySlides" style="text-align: center;"><img src="BuckRogersMovie1979.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="BuckRogersTV1979.jpg" title="Buster Crabbe and Gil Gerard"></div>
+<div class="mySlides" style="text-align: center;"><img src="BuckRogersAW.jpg" title ="1979 by A&W"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
