--- a/index.html
+++ b/index.html
@@ -443,6 +443,13 @@
 </tr>
 
 <tr>
+<td>A Silent Comics</td>
+<td>1998</td>
+<td>Publisher</td>
+<td><a href="ASilent/ASilent.html">Details</a></td>
+</tr
+
+<tr>
 <td>A Wave Blue World</td>
 <td>2005</td>
 <td>Publisher</td>
@@ -2065,6 +2072,13 @@
 <td>1954</td>
 <td>Atlas</td>
 <td><a href="Arrowhead/Arrowhead.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Arsenic Lullaby</td>
+<td>1998</td>
+<td>A Silent Comics</td>
+<td><a href="ASilent/ASilent.html">Details</a></td>
 </tr>
 
 <tr>
