--- a/TedMcKeever/TedMcKeever.html
+++ b/TedMcKeever/TedMcKeever.html
@@ -31,6 +31,8 @@
 <div class="mySlides" style="text-align: center;"><img src="TedMcKeever10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TedMcKeever11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TedMcKeever12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TedMcKeever13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TedMcKeever14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -86,7 +88,7 @@ Comics written and drawn (unless noted otherwise) by Ted McKeever include:
 <li>"Engines" (in Legends of the Dark Knight #74–75, DC, 1996)
 <li>"Perpetual Mourning" (in Batman: Black &map; White #1, DC, 1997)
 <li>Superman's Metropolis (written by Randy &amp; Jean-Marc Lofficier &amp; Roy Thomas, Elseworlds, 1997)
-<li>Junk Culture #1–2 (DC, 1997)
+<li><a href="">Junk Culture</a> (1997)
 <li>Toxic Gumbo (written by Lydia Lunch, DC, 1998)
 <li>Batman: Nosferatu (written by Randy &amp; Jean-Marc Lofficier, Elseworlds, 1999)
 <li>Faith #1–5 (Vertigo, 2000)
