--- a/index.html
+++ b/index.html
@@ -12547,6 +12547,13 @@
 </tr>
 
 <tr>
+<td>New England Comics</td>
+<td>1988</td>
+<td>Publisher</td>
+<td><a href="NewEnglandComics/NewEnglandComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>New Excalibur</td>
 <td>2006</td>
 <td>Marvel</td>
@@ -14915,6 +14922,13 @@
 </tr>
 
 <tr>
+<td>Shatter</td>
+<td>1985</td>
+<td>First Comics</td>
+<td><a href="Shatter/Shatter.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sheena</td>
 <td>1948</td>
 <td>Fiction House</td>
@@ -17216,6 +17230,13 @@
 <td>1987</td>
 <td>Marvel</td>
 <td><a href="Visionaries/Visionaries.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Viz</td>
+<td>1986</td>
+<td>Publisher</td>
+<td><a href="Viz/Viz.html">Details</a></td>
 </tr>
 
 <tr>
