--- a/index.html
+++ b/index.html
@@ -2328,6 +2328,13 @@
 </tr>
 
 <tr>
+<td>AW Nugent Publishing</td>
+<td>1945</td>
+<td>Publisher</td>
+<td><a href="AWNugentPublishing/AWNugentPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aw Yeah Comics: Action Cat &amp; Adventure Bug</td>
 <td>2016</td>
 <td>Dark Horse</td>
