--- a/index.html
+++ b/index.html
@@ -512,6 +512,13 @@
 </tr>
 
 <tr>
+<td>A Plus Comics</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="APlusComics/APlusComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aardvark-Vanaheim</td>
 <td>1977</td>
 <td>Publisher</td>
@@ -1505,6 +1512,13 @@
 <td>2007</td>
 <td>Publisher</td>
 <td><a href="Alterna/Alterna.html">Details</a></td>
+</tr>
+
+<tr>
+<td>AM Works</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="AMWorks/AMWorks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12579,6 +12593,13 @@
 <td>1935</td>
 <td>National Allied</td>
 <td><a href="NewFun/NewFun.html">Details</a></td>
+</tr>
+
+<tr>
+<td>New Gen</td>
+<td>2008</td>
+<td>Marvel</td>
+<td><a href="NewGen/NewGen.html">Details</a></td>
 </tr>
 
 <tr>
