--- a/index.html
+++ b/index.html
@@ -17078,6 +17078,13 @@
 </tr>
 
 <tr>
+<td>USA Comics</td>
+<td>1941</td>
+<td>Timely</td>
+<td><a href="USAComics/USAComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Usagi Yojimbo</td>
 <td>1984</td>
 <td>Dark Horse</td>
