--- a/WhatIf/WhatIf.html
+++ b/WhatIf/WhatIf.html
@@ -8,10 +8,34 @@
 </head>
 
 <body>
-<img src="WhatIf1977series1.jpg"> <img src="WhatIf.jpg"> <br>
-Series: 47 issues 1977 - 1984, 115 issues 1989 - 1998<br>
-Publisher: Marvel<br>
+<img src="WhatIf1977series1.jpg"><br>
+47 issues from 1977 - 1984, 115 issues from 1989 - 1998 by Marvel
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf1977series10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WhatIf.jpg"></div>
+
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 What If, sometimes rendered as What If...?, is a series of comic books published by Marvel Comics whose stories explore how the Marvel Universe might have unfolded if key moments in its history had not occurred as they did in mainstream continuity. What If comics have been published in eleven series as well as many stand-alone issues since the 1970s.
 </p><p>
 The initial 47-issue series ran from February 1977 to October 1984. The first What If story was "What If Spider-Man had Joined the 'Fantastic Four'?". It presented an alternate version of events seen in The Amazing Spider-Man #1 (1963). What If #24, which is titled "What If Gwen Stacy Had Lived?" and focuses on the consequences of Spider-Man's secret identity being publicly exposed, is one of the most highly regarded What If stories.
