--- a/index.html
+++ b/index.html
@@ -519,10 +519,35 @@
 </tr>
 
 <tr>
+<td>AAA Milwaukee Publishing</td>
+<td>1999</td>
+<td>Publisher</td>
+<td><a href="AAAMilwaukeePublishing/AAAMilwaukeePublishing.html">Details</a></td>
+
+<tr>
+<td>AAA Pop</td>
+<td>2000</td>
+<td>Publisher</td>
+<td><a href="AAAPop/AAAPop.html">Details</a></td>
+
+<tr>
+<td>Aaaargh!</td>
+<td>1987</td>
+<td>Publisher</td>
+<td><a href="Aaaargh/Aaaargh.html">Details</a></td>
+
+<tr>
 <td>Aardvark-Vanaheim</td>
 <td>1977</td>
 <td>Publisher</td>
 <td><a href="AardvarkVanaheim/AardvarkVanaheim.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aardwolf Comics</td>
+<td>1994</td>
+<td>Publisher</td>
+<td><a href="Aardwolf/Aardwolf.html">Details</a></td>
 </tr>
 
 <tr>
