--- a/index.html
+++ b/index.html
@@ -558,6 +558,13 @@
 </tr>
 
 <tr>
+<td>Aazurn Publishing</td>
+<td>2008</td>
+<td>Publisher</td>
+<td><a href="Aazurn/Aazurn.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abandoned Cars</td>
 <td>2008</td>
 <td>Fantagraphics</td>
@@ -9139,6 +9146,13 @@
 <td>1950</td>
 <td>Fiction House</td>
 <td><a href="Indians/Indians.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Indie Comics Magazine</td>
+<td>2011</td>
+<td>Aazurn</td>
+<td><a href="Aazurn/Aazurn.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17787,6 +17801,13 @@
 <td>1990</td>
 <td>Epic</td>
 <td><a href="WildCards/WildCards.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstar</td>
+<td>1993</td>
+<td>Image</td>
+<td><a href="Wildstar/Wildstar.html">Details</a></td>
 </tr>
 
 <tr>
