--- a/Wildstar/Wildstar.html
+++ b/Wildstar/Wildstar.html
@@ -25,6 +25,9 @@
 <div class="mySlides" style="text-align: center;"><img src="Wildstar4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Wildstar5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Wildstar6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Wildstar7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Wildstar8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Wildstar9.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -33,7 +36,9 @@
 </p><p>
 WildStar is a fictional character created by veteran comic book artist Al Gordon, with Jerry Ordway contributing the pencils and John Workman doing the lettering, appearing in comic books published by Image Comics. The character first appeared in WildStar: Sky Zero #1 (March 1993).
 </p><p>
-Micky Gabriel is empowered by the WildStar, a member of a nonsentient species known as the k'l vann. The WildStar bonds with its host to become a distinct and integral part of the host's metabolism. It connects directly to the body functions that control glands and other bodily processes that chemically influence behavior. The symbiote then "eats" the body chemicals that result from the host's negative emotions. The host in turn is powered by the symbiote's alien chemistry resulting in its wearer being granted superhuman strength, the ability to leap tall buildings in a single bound, and invulnerability. The symbiote's most devastating weapon in its alien arsenal is a force blast that is discharged by the wearer short-circuiting the symbiote membrane's bio-circuit epidermis.
+Micky Gabriel is empowered by the WildStar, a member of a nonsentient species known as the k'l vann. The WildStar bonds with its host to become a distinct and integral part of the host's metabolism. It connects directly to the body functions that control glands and other bodily processes that chemically influence behavior. 
+</p><p>
+The symbiote then "eats" the body chemicals that result from the host's negative emotions. The host in turn is powered by the symbiote's alien chemistry resulting in its wearer being granted superhuman strength, the ability to leap tall buildings in a single bound, and invulnerability. The symbiote's most devastating weapon in its alien arsenal is a force blast that is discharged by the wearer short-circuiting the symbiote membrane's bio-circuit epidermis.
 </p>
 
 </body>
