--- a/index.html
+++ b/index.html
@@ -593,6 +593,13 @@
 </tr>
 
 <tr>
+<td>Ablaze Publishing</td>
+<td>2019</td>
+<td>Publisher</td>
+<td><a href="AblazePublishing/AblazePublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abominable Charles Christopher</td>
 <td>2010</td>
 <td>TXcomics</td>
@@ -1558,6 +1565,13 @@
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="AmalasBlade/AmalasBlade.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Amalgamated Press</td>
+<td>1890</td>
+<td>Publisher</td>
+<td><a href="AmalgamatedPress/AmalgamatedPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17089,6 +17103,13 @@
 </tr>
 
 <tr>
+<td>UnSacred</td>
+<td>2019</td>
+<td>Ablaze</td>
+<td><a href="AblazePublishing/AblazePublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Untamed</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -17804,13 +17825,6 @@
 </tr>
 
 <tr>
-<td>Wildstar</td>
-<td>1993</td>
-<td>Image</td>
-<td><a href="Wildstar/Wildstar.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Wild Storm</td>
 <td>2017</td>
 <td>DC</td>
@@ -17829,6 +17843,13 @@
 <td>1948</td>
 <td>Atlas</td>
 <td><a href="WildWest/WildWest.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wildstar</td>
+<td>1993</td>
+<td>Image</td>
+<td><a href="Wildstar/Wildstar.html">Details</a></td>
 </tr>
 
 <tr>
