--- a/AmalgamatedPress/AmalgamatedPress.html
+++ b/AmalgamatedPress/AmalgamatedPress.html
@@ -19,8 +19,31 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
-
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Amalgamated25.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,106 +55,106 @@ AP was sold to The Mirror Group in 1959 and formed the core of the IPC Magazines
 </p><p>
 Titles
 </p><p>
-<li>Billy the Kid Book of Picture Stories [b]	1957	2 issues (1 indexed)	Gallery	1957 - 1958
-<li>Bo-Peep and Little Boy Blue [m]	1929	245 issues (0 indexed)	Add	1929 - 1934
-<li>Bubbles [m]	1921	1024 issues (1 indexed)	Have 4 (Need 1021)	16 April 1921 - 24 May 1941
-<li>Buck Jones Annual	1957	2 issues (0 indexed)	Gallery	1957 - ?
-<li>Butterfly	1904	656 issues (0 indexed)	Have 2 (Need 654)	1904 - 1917
-<li>Butterfly [m]	1925	760 issues (0 indexed)	Have 9 (Need 758)	1925 - 1940
-<li>Butterfly and Firefly [m]	1917	446 issues (0 indexed)	Add	1917 - 1925
-<li>Butterfly Annual	1939	1 issues (0 indexed)	Gallery	1939
-<li>Captain Condor Space-Man of the Unknown Moon [a]	1950	1 issues (0 indexed)	Gallery	1950
-<li>The Champion [m]	1922	1 issues (1 indexed)	No Covers	March 19, 1955
-<li>Charlie Chaplin Fun Book	1915	1 issues (0 indexed)	Have 1 (Need 1)	1915
-<li>Chicks' Own [m]	1920	1605 issues (0 indexed)	Have 9 (Need 1596)	25 September 1920 - 9 March 1957
-<li>Chicks' Own Annual [b]	1924	33 issues (0 indexed)	Have 14 (Need 20)	1924 - 1957
-<li>Children's Fairy	1919	76 issues (0 indexed)	Add	1919 - 1921
-<li>Children's Sunday Fairy	1919	3 issues (0 indexed)	Add	1919 - 1919
-<li>Chuckles	1914	6 issues (0 indexed)	Add	10 January 1914 - 1 December 1923
-<li>Comet [m]	1949	510 issues (8 indexed)	Have 448 (Need 72)	1949 - 1959
-<li>Comic Cuts [m]	1890	3006 issues (11 indexed)	Have 18 (Need 2991)	17 May 1890 - 1953
-<li>Comic Home Journal [m]	1895	488 issues (0 indexed)	Have 1 (Need 487)	1895 - 1904
-<li>Comic Life [m]	1920	5 issues (0 indexed)	Have 1 (Need 4)	13 March 1920 - 21 January 1928
-<li>Confessions Library	1959	44 issues (40 indexed)	Have 15 (Need 33)	February 1959 - December 1960
-<li>Cowboy Comics [m]	1950	204 issues (31 indexed)	Have 206 (Need 6)	April 1950 - February 1957
-<li>Cowboy Picture Library [m]	1957	264 issues (87 indexed)	Have 260 (Need 21)	March 1957 - September 1962
-<li>Crackers	1929	615 issues (0 indexed)	Have 1 (Need 614)	1929 - 1941
+<li><a href="Amalgamated1.jpg">Billy the Kid Book of Picture Stories</a> (1957)
+<li><a href="Amalgamated2.jpg">Bo-Peep and Little Boy Blue</a> (1929)
+<li>Bubbles  (1921)
+<li>Buck Jones Annual   (1957)
+<li>Butterfly   (1904)
+<li>Butterfly   (1925)
+<li>Butterfly and Firefly   (1917)
+<li>Butterfly Annual    (1939)
+<li>Captain Condor Space-Man of the Unknown Moon  (1950)
+<li>The Champion    (1922)
+<li>Charlie Chaplin Fun Book    (1915)
+<li>Chicks' Own     (1920)
+<li>Chicks' Own Annual  (1924)
+<li>Children's Fairy    (1919)
+<li>Children's Sunday Fairy (1919)
+<li>Chuckles    (1914)
+<li>Comet   (1949)
+<li>Comic Cuts  (1890)
+<li>Comic Home Journal  (1895)
+<li>Comic Life  (1920)
+<li>Confessions Library (1959)
+<li>Cowboy Comics   (1950)
+<li>Cowboy Picture Library  (1957)
+<li>Crackers    (1929)
 <li>Famous Romance Library (1956)
-<li>The Favorite Comic	1911	324 issues (1 indexed)	Have 3 (Need 324)	1911 - 1917
-<li>Film Fun	1920	2222 issues (39 indexed)	Have 341 (Need 2087)	17 January 1920 - 8 September 1962
-<li>Film Fun Annual	1938	24 issues (1 indexed)	Gallery	1938 - 1961
-<li>Film Picture Stories	1934	30 issues (0 indexed)	Gallery	1934 - 1935
-<li>Firefly	1914	51 issues (0 indexed)	Add	1914 - 1915
-<li>Firefly	1915	111 issues (0 indexed)	Add	1915 - 1917
-<li>Fun and Fiction	1911	124 issues (0 indexed)	Add	1911 - 1914
-<li>The Funny Wonder [m]	1893	325 issues (4 indexed)	Have 1 (Need 324)	1893 - 1899
-<li>The Funny Wonder	1899	109 issues (0 indexed)	Have 1 (Need 109)	1899 - 1901
-<li>The Funny Wonder [m]	1914	1404 issues (1 indexed)	Have 3 (Need 1401)	1914 - 1942
-<li>The Funny Wonder Annual [b]	1937	5 issues (0 indexed)	Have 4 (Need 1)	1937 ? - 1937 ?
-<li>Girls' Crystal [m]	1953	529 issues (0 indexed)	Have 187 (Need 348)	21 March 1953 - 1963
-<li>Girls' Crystal Annual [b]	1939	39 issues (0 indexed)	Have 21 (Need 18)	1939 - 1978 ?
-<li>Golden	1937	135 issues (1 indexed)	Have 1 (Need 134)	1937 - 1940
-<li>The Golden Book of Comics	1950	1 issues (0 indexed)	Gallery	1950
-<li>Halfpenny Wonder	1914	39 issues (0 indexed)	Add	1914 - 1914
-<li>Happy Days	1938	45 issues (1 indexed)	Have 1 (Need 44)	1938 - 1939
-<li>Illustrated Chips	1890	6 issues (0 indexed)	Add	26 July 1890 - 1890
-<li>Illustrated Chips	1890	2997 issues (1 indexed)	Have 31 (Need 2986)	September 6, 1890 - 1952
-<li>Jack and Jill	1909	3 issues (0 indexed)	Add	1909 - 29 July 1909
-<li>Jester [m]	1912	465 issues (0 indexed)	Add	1912 - 1920
-<li>Jester	1924	847 issues (0 indexed)	Have 1 (Need 846)	1924 - 1940
-<li>Jester and Wonder [m]	1902	506 issues (1 indexed)	Have 1 (Need 505)	1902 - 1912
-<li>Jingles	1934	741 issues (0 indexed)	Have 3 (Need 738)	1934 - 1954
-<li>John Wesley	1953	1 issues (0 indexed)	Add	16 May 1953
-<li>The Joker	1927	655 issues (0 indexed)	Have 3 (Need 652)	1927 - 1940
-<li>Jolly Comic	1935	250 issues (0 indexed)	Have 1 (Need 249)	1935 - 1939
-<li>Jolly Jester [m]	1920	165 issues (0 indexed)	Add	1920 - 1924
-<li>Jolly Times	1920	5 issues (0 indexed)	Add	1920 - 1920
-<li>Jungle Jinks	1923	62 issues (0 indexed)	Have 1 (Need 61)	8 December 1923 - 7 February 1925
-<li>Kinema Comic	1920	651 issues (0 indexed)	Have 2 (Need 649)	1920 - 1932
-<li>Kit Carson's Cowboy Annual	1954	7 issues (0 indexed)	Gallery	1954 ? - 1960 ?
-<li>Knockout [m]	1939	1240 issues (73 indexed)	Have 497 (Need 759)	4 March 1939 - 16 February 1963
-<li>Knockout Annual [a]	1957	6 issues (0 indexed)	Gallery	1956 - ?
-<li>Knockout Fun Book	1941	16 issues (0 indexed)	Have 16 (Need 2)	1941 - 1955
-<li>Larks	1927	656 issues (0 indexed)	Have 3 (Need 655)	1927 - 1940
-<li>Lion [m]	1952	389 issues (118 indexed)	Have 216 (Need 233)	23rd February 1952 - 1959
-<li>Little Sparks	1920	4 issues (0 indexed)	Add	1920 - 1920
-<li>Little Sparks	1920	124 issues (0 indexed)	Add	1920 - 1922
-<li>Lot-O'-Fun	1920	4 issues (0 indexed)	Add	13 March 1920 - 16 February 1929
-<li>Love Romance	1950	2 issues (0 indexed)	Add	1950 - 1950
-<li>Marilyn [m]	1955	549 issues (106 indexed)	Have 148 (Need 416)	19 March 1955 - 18 September 1965
-<li>Merry and Bright	1910	337 issues (2 indexed)	Have 1 (Need 336)	1910 - 31 March 1917
-<li>Merry and Bright the Favorite Comic	1917	928 issues (0 indexed)	Add	1917 - 1935
-<li>Mighty Midget Comic	1958	4 issues (0 indexed)	Add	1958 - 1958
-<li>Monthly Playbox	1904	6 issues (0 indexed)	Add	1904 - 1905
-<li>My Favourite	1928	351 issues (0 indexed)	Have 1 (Need 350)	1928 - 1934
-<li>Only My Fun	1908	1 issues (0 indexed)	Add	22 October 1908
-<li>The Penny Wonder	1912	47 issues (0 indexed)	Have 1 (Need 46)	1912 - 1912
-<li>Playbox	1898	2 issues (0 indexed)	Add	1898 - ?
-<li>Playbox	1905	61 issues (0 indexed)	Have 1 (Need 60)	1905 - 1910
-<li>Playbox [m]	1910	44 issues (0 indexed)	Add	1910 - 1913
-<li>Playbox	1925	1279 issues (1 indexed)	Have 11 (Need 1270)	1925 - 1955
-<li>Playbox Annual [b]	1909	48 issues (0 indexed)	Have 7 (Need 41)	1909 - 1956
-<li>Playhour [m]	1910	3 issues (0 indexed)	Add	1910 - 1910
-<li>Playhour Pictures	1954	31 issues (0 indexed)	Have 1 (Need 31)	16 October 1954 - 14 May 1955
-<li>Playtime	1919	243 issues (0 indexed)	Have 4 (Need 242)	1919 - 1923
-<li>Playtime	1923	307 issues (0 indexed)	Add	1923 - 1929
-<li>Puck	1904	1867 issues (1 indexed)	Have 2 (Need 1865)	30 July 1904 - 1940
-<li>Radio Fun [m]	1938	1018 issues (7 indexed)	Have 42 (Need 978)	1938 - 1959
-<li>Radio Fun Annual	1940	21 issues (2 indexed)	Have 19 (Need 3)	1940 - 1960
-<li>The Rainbow	1914	1898 issues (1 indexed)	Have 10 (Need 1891)	February 14, 1914 - April 28, 1956
-<li>Rainbow Annual [b]	1927	10 issues (0 indexed)	Have 10 (Need 1)	1927 - ?
-<li>Round the Nursery Fire	1915	5 issues (0 indexed)	Add	18 December 1915 - 1915
-<li>Roxy	1958	288 issues (55 indexed)	Have 54 (Need 259)	1958 - 14 September 1963
-<li>School Friend	1950	766 issues (0 indexed)	Have 176 (Need 591)	1950 - 1965
-<li>School Friend Picture Library [m]	1962	39 issues (0 indexed)	Have 13 (Need 26)	February 1962 - 1965
-<li>Sparkler	1931	251 issues (0 indexed)	Add	1931 - 1939
-<li>Sports Fun	1922	13 issues (0 indexed)	Add	1922 - 1922
-<li>Sun [m]	1952	395 issues (10 indexed)	Have 344 (Need 64)	March 29,1952 - 1959
-<li>Sun Comic [m]	1949	122 issues (0 indexed)	Have 68 (Need 57)	1949 - March 22 1952
-<li>Sunbeam	1922	173 issues (0 indexed)	Add	1922 - 1926
-<li>Sunbeam	1926	747 issues (0 indexed)	Have 1 (Need 747)	1926 - 1940
-<li>Sunday Fairy	1919	22 issues (0 indexed)	Add	1919 - 1919
-<li>Super Detective Library [m]	1953	154 issues (123 indexed)	Have 156 (Need 4)	March 1953 - 1959 ?
+<li>The Favorite Comic  (1911)
+<li>Film Fun    (1920)
+<li>Film Fun Annual (1938)
+<li>Film Picture Stories    (1934)
+<li>Firefly (1914)
+<li>Firefly (1915)
+<li>Fun and Fiction (1911)
+<li>The Funny Wonder    (1893)
+<li>The Funny Wonder    (1899)
+<li>The Funny Wonder    (1914)
+<li>The Funny Wonder Annual (1937)
+<li>Girls' Crystal  (1953)
+<li>Girls' Crystal Annual   (1939)
+<li>Golden  (1937)
+<li>The Golden Book of Comics   (1950)
+<li>Halfpenny Wonder    (1914)
+<li>Happy Days  (1938)
+<li>Illustrated Chips   (1890)
+<li>Illustrated Chips   (1890)
+<li>Jack and Jill   (1909)
+<li>Jester  (1912)
+<li>Jester  (1924)
+<li>Jester and Wonder   (1902)
+<li>Jingles (1934)
+<li>John Wesley (1953)
+<li>The Joker   (1927)
+<li>Jolly Comic (1935)
+<li>Jolly Jester    (1920)
+<li>Jolly Times (1920)
+<li>Jungle Jinks    (1923)
+<li>Kinema Comic    (1920)
+<li>Kit Carson's Cowboy Annual  (1954)
+<li>Knockout    (1939)
+<li>Knockout Annual  (1957)
+<li>Knockout Fun Book   (1941)
+<li>Larks   (1927)
+<li>Lion    (1952)
+<li>Little Sparks   (1920)
+<li>Little Sparks   (1920)
+<li>Lot-O'-Fun  (1920)
+<li>Love Romance    (1950)
+<li>Marilyn     (1955)
+<li>Merry and Bright    (1910)
+<li>Merry and Bright the Favorite Comic (1917)
+<li>Mighty Midget Comic (1958)
+<li>Monthly Playbox (1904)
+<li>My Favourite    (1928)
+<li>Only My Fun (1908)
+<li>The Penny Wonder    (1912)
+<li>Playbox (1898)
+<li>Playbox (1905)
+<li>Playbox     (1910)
+<li>Playbox (1925)
+<li>Playbox Annual  (1909)
+<li>Playhour    (1910)
+<li>Playhour Pictures   (1954)
+<li>Playtime    (1919)
+<li>Playtime    (1923)
+<li>Puck    (1904)
+<li>Radio Fun   (1938)
+<li>Radio Fun Annual    (1940)
+<li>The Rainbow (1914)
+<li>Rainbow Annual  (1927)
+<li>Round the Nursery Fire  (1915)
+<li>Roxy    (1958)
+<li>School Friend   (1950)
+<li>School Friend Picture Library   (1962)
+<li>Sparkler    (1931)
+<li>Sports Fun  (1922)
+<li>Sun     (1952)
+<li>Sun Comic   (1949)
+<li>Sunbeam (1922)
+<li>Sunbeam (1926)
+<li>Sunday Fairy    (1919)
+<li>Super Detective Library     (1953)
 </p>
 
 </body>
