--- a/AtlasComics/AtlasComics.html
+++ b/AtlasComics/AtlasComics.html
@@ -70,6 +70,7 @@ Atlas Comics was the successor of Timely Comics, the company that magazine and p
 <li>Rugged Action    (1954)
 <li>Sgt. Barney Barker    (1956)
 <li>Six-Gun Western     (1957)
+<li><a href="../SpaceAce/SpaceAce.html">Space Ace</a> (1960)
 <li>Space Squadron    (1951)
 <li>Spaceman    (1953)
 <li>Spellbound    (1952)
