--- a/index.html
+++ b/index.html
@@ -15409,6 +15409,13 @@
 </tr>
 
 <tr>
+<td>Space Ace</td>
+<td>1960</td>
+<td>Atlas</td>
+<td><a href="SpaceAce/SpaceAce.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Space Action</td>
 <td>1952</td>
 <td>Ace</td>
