--- a/index.html
+++ b/index.html
@@ -4784,6 +4784,13 @@
 </tr>
 
 <tr>
+<td>Creeps</td>
+<td>2014</td>
+<td>Warrant Publishing</td>
+<td><a href="WarrantPublishing/WarrantPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Creepshow</td>
 <td>1982</td>
 <td>Penguin Books</td>
@@ -17521,6 +17528,13 @@
 <td>1977</td>
 <td>Publisher</td>
 <td><a href="WarpGraphics/WarpGraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warrant Publishing</td>
+<td>1988</td>
+<td>Publisher</td>
+<td><a href="WarrantPublishing/WarrantPublishing.html">Details</a></td>
 </tr>
 
 <tr>
