--- a/KurtVonnegut/KurtVonnegut.html
+++ b/KurtVonnegut/KurtVonnegut.html
@@ -19,7 +19,8 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut2.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -32,7 +33,7 @@ The Science Fiction and Fantasy Hall of Fame inducted Vonnegut posthumously in 2
 </p><p>
 Novels
 </p><p>
-<li>Player Piano (1952)
+<li><a href="Vonnegut2.jpg">Player Piano</a> (1952)
 <li>The Sirens of Titan (1959)
 <li>Mother Night (1961)
 <li>Cat's Cradle (1963)
