--- a/KurtVonnegut/KurtVonnegut.html
+++ b/KurtVonnegut/KurtVonnegut.html
@@ -21,6 +21,9 @@
 
 <div class="mySlides" style="text-align: center;"><img src="Vonnegut1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vonnegut2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut5.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -34,9 +37,9 @@ The Science Fiction and Fantasy Hall of Fame inducted Vonnegut posthumously in 2
 Novels
 </p><p>
 <li><a href="Vonnegut2.jpg">Player Piano</a> (1952)
-<li>The Sirens of Titan (1959)
-<li>Mother Night (1961)
-<li>Cat's Cradle (1963)
+<li><a href="Vonnegut3.jpg">The Sirens of Titan</a> (1959)
+<li><a href="Vonnegut4.jpg">Mother Night</a> (1961)
+<li><a href="Vonnegut5.jpg">Cat's Cradle</a> (1963)
 <li>God Bless You, Mr. Rosewater (1965)
 <li>Slaughterhouse-Five (1969)
 <li>Breakfast of Champions (1973)
