--- a/KurtVonnegut/KurtVonnegut.html
+++ b/KurtVonnegut/KurtVonnegut.html
@@ -24,7 +24,9 @@
 <div class="mySlides" style="text-align: center;"><img src="Vonnegut3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vonnegut4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vonnegut5.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vonnegut8.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -40,9 +42,9 @@ Novels
 <li><a href="Vonnegut3.jpg">The Sirens of Titan</a> (1959)
 <li><a href="Vonnegut4.jpg">Mother Night</a> (1961)
 <li><a href="Vonnegut5.jpg">Cat's Cradle</a> (1963)
-<li>God Bless You, Mr. Rosewater (1965)
-<li>Slaughterhouse-Five (1969)
-<li>Breakfast of Champions (1973)
+<li><a href="Vonnegut6.jpg">God Bless You, Mr. Rosewater</a> (1965)
+<li><a href="Vonnegut7.jpg">Slaughterhouse-Five</a> (1969)
+<li><a href="Vonnegut8.jpg">Breakfast of Champions</a> (1973)
 <li>Slapstick (1976)
 <li>Jailbird (1979)
 <li>Deadeye Dick (1982)
