--- a/index.html
+++ b/index.html
@@ -1089,6 +1089,13 @@
 </tr>
 
 <tr>
+<td>Aircel Publishing</td>
+<td>1988</td>
+<td>Publisher</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Airtight Garage</td>
 <td>1987</td>
 <td>Marvel</td>
