--- a/index.html
+++ b/index.html
@@ -11676,6 +11676,13 @@
 </tr>
 
 <tr>
+<td>Maxx</td>
+<td>1993</td>
+<td>Image</td>
+<td><a href="Maxx/Maxx.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mayhem</td>
 <td>1989</td>
 <td>Dark Horse</td>
