--- a/AblazePublishing/AblazePublishing.html
+++ b/AblazePublishing/AblazePublishing.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="UnSacred1.jpg">
+<img src="Cimmerian1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,17 +18,30 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="Cimmerian1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GungHo1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GungHo2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="UnSacred4.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="VampireState1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="VampireState2.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
 Ablaze Publishing was startedin 2019 with Un/Sacred.
+</p><p>
+Titles
+</p><p>
+<li>Cimmerian: Queen of the Black Coast (2020)
+<li>Gung-Ho (2019)
+<li>Kidz (2020)
+<li>Un/Sacred (2019)
+<li>Vampire State Building (2019)
+<li>Wild Thing Or: My Life as a Wolf (2019)
 </p>
 
 </body>
